package exercise.ex01.ex8_ex9;

public interface Observer {

    public abstract void update();

}
